# spec-kit

./: .coderabbit.yaml  .devtools.config.json.example  .editorconfig  .env.template  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .kilocodemodes  .mailmap  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintrc  .pre-commit-config.yaml  .secrets.baseline  .speckit-config-schema.json  .speckit.config.json.example  .zenodo.json  ADAPT_TO_ODOO.md  AGENTS.md  ATTRIBUTION.md  BEFORE_AFTER_COMPARISON.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE_TRAE_AI.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  ENHANCEMENT_REQUIREMENTS.md  EXISTING-CAPABILITIES-ANALYSIS.md  FISH_TESTING_PLAN_FISHTAPE.md  FORK_CHANGES.md  FORK_CUSTOMIZATIONS.md  GUIDELINES-IMPLEMENTATION-PLAN.md  HANDOFF_DOCUMENTATION.md  HYBRID-APPROACH-PHASES-TOKEN-OPTIMIZED.md  IMPLEMENTATION-PLAN-UX-IMPROVEMENTS.md  (+95 more)
.ai/: README.md
.claude/: settings.local.json
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  bandit-baseline.json  copilot-instructions.md  pull_request_template.md  security-audit-requirements.txt
.guidelines/: README.md  branch-config.json  branching-guidelines.md  dotnet-guidelines.md  java-guidelines.md  nodejs-guidelines.md  python-guidelines.md  reactjs-guidelines.md  stack-mapping.json
.jules/: bolt.md
.refactor/: fish-testing-plan-02.md  refactor-01.md  testing-implementation-plan.md  testing-implementation-summary.md
.spec-kit/: project.json
.specify/: feature.json  init-options.json  integration.json
0-Docs-Yensy/: VS Code - Let it Cook - Introducing Spec Kit for Spec-Driven Development! - Episode 13.txt  repomix-output-Leonai-do-spec-kit.xml  spec-kit-transcript.txt
Development Guide Dev/: Untitled 1.md  Untitled 2.md  Untitled.md  deep-research-report.md
PRPs/: archon-phase2-enhancements.md  archon-speckit-extension.md
agents/: spec-kit-creator.md
ai_docs/: README.md
assets/: README.md
benchmarks/terminal_bench_agent/: README.md  pyproject.toml
benchmarks/terminal_bench_agent/specify_terminal_bench/: __init__.py  agent.py  claude-code-setup.sh.j2  opencode-setup.sh.j2
benchmarks/terminal_bench_agent/specify_terminal_bench/prompt_templates/: specify_workflow.j2
brainstorm/: 01-extension-capability-system.md
bundles/: README.md  catalog.json
contributing/: README.md  development-setup.md
copilot-ask-questions/: README.md  preset.yml
design/: README.md  architecture.md  principles.md  spec.md
docs/: .gitignore  AGENTS.md  BUSINESS_TEAMS_GUIDE.md  Best Practices.md  INSTALL_MEMORY.md  MULTI_REPO_IMPLEMENTATION.md  README.md  SHADOW_MODE.md  agent-assets.md  ai-coding-finance-course-01-ai-assistant-basics.html  ai-coding-finance-course-02-ai-coding-first-task.html  ai-coding-finance-course-03-team-risk-and-quality.html  ai-coding-finance-course-04-ai-team-sdd-workflow.html  ai-team-project-map.html  approval-gates-guide.md  archon-integration-internals.md  branching-strategy.md  cli-commands.md  cli-reference.md  configuration.md  cross-platform-solution.md  custom-agent-assets.md  docfx.json  example-constitutions-repo.md  example-workspace.yml  existing-project-guide.md  extension-behavior-deployment.md  index.md  installation.md  issue-resolution-flow.md  local-development.md  multi-repo-modes-comparison.md  multi-repo-testing.md  multi-repo-workspaces.md  multi-stack-example.md  overview.md  powershell-requirements.md  quickstart.md  remote-constitutions.md  reverse-engineering-examples.md  (+7 more)
docs-plus/: ai_coding_revolution_paper.md  readme.md
examples/: README.md
excel-diff-app/: pyproject.toml
excel-diff-app/.specify/specs/001-excel-diff/: plan.md  quickstart.md  spec.md  tasks.md
excel-diff-app/examples/: generate_samples.py
excel-diff-app/examples/data/: fileA.xlsx  fileB.xlsx
excel-diff-app/src/excel_diff/: __init__.py  cli.py  compare.py  reader.py  report.py
excel-diff-app/tests/: test_compare.py
extensions/: EXTENSION-API-REFERENCE.md  EXTENSION-COMPARISON-GUIDE.md  EXTENSION-DEVELOPMENT-GUIDE.md  EXTENSION-PUBLISHING-GUIDE.md  EXTENSION-USER-GUIDE.md  README.md  RFC-ADVANCED-AI-WORKFLOWS.md  RFC-EXTENSION-BEHAVIOR-DEPLOYMENT.md  RFC-EXTENSION-SYSTEM.md  catalog.community.json  catalog.json
hooks/: README.md  post-checkout.ps1.sample  post-checkout.sample  pre-commit  (+6 more)
(+2603 files in other folders)
