[project]
name = "specify-cli"
version = "0.0.25"
description = "Specify CLI, part of GitHub Spec Kit. A tool to bootstrap your projects for Spec-Driven Development (SDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
specify = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

# Include bundled templates and scripts in the package
[tool.hatch.build.targets.wheel.force-include]
"templates" = "specify_cli/bundled/templates"
"scripts" = "specify_cli/bundled/scripts"
"memory" = "specify_cli/bundled/memory"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/templates",
    "/scripts",
    "/memory",
]

