[project]
name = "specify-terminal-bench-agent"
version = "0.1.0"
description = "Terminal Bench agent that applies the Specify spec-driven workflow"
requires-python = ">=3.12"
dependencies = [
    "terminal-bench>=0.2.17",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["specify_terminal_bench"]
include = ["specify_terminal_bench/**"]
